@@ -8,6 +8,8 @@
   * Support for "DB_ENV->get_encrypt_flags()".
   * Support for "DB->get_encrypt_flags()".
   * Support for "DB_ENV->get_shm_key()".
+  * Support for "DB_ENV->get_cachesize()".
+  * Support for "DB->get_cachesize()".
 
 4.8.0:
   * Support for Berkeley DB 4.8.
